load("@io_bazel_rules_go//go:def.bzl", "gazelle", "go_library")

gazelle(
    name = "gazelle",
    prefix = "github.com/iLogtail/gonvml",
)

go_library(
    name = "go_default_library",
    srcs = [
        "bindings.go",
        "nvml.h",
    ],
    cgo = True,
    clinkopts = ["-ldl -Wl,--unresolved-symbols=ignore-in-object-files"],
    importpath = "github.com/iLogtail/gonvmll",
    visibility = ["//visibility:public"],
)
